--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -21,7 +21,11 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quisquam illo laudantium aspernatur dicta modi tempore repudiandae voluptatum temporibus aut doloremque alias, beatae deleniti eum cupiditate ea quasi doloribus mollitia. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis eum iusto sequi maxime dignissimos possimus, qui ducimus, corporis omnis, ab dolorem ullam quisquam distinctio veritatis odio quidem perspiciatis quibusdam veniam.</p>
     
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+       
+        <p>Infelismente seu navegador não é compatível com isso!</p>
+
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia fugiat voluptate laboriosam ducimus aperiam quod culpa in quidem. Ipsam nisi quas assumenda soluta eligendi officiis voluptatum ducimus nesciunt, unde sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero hic velit saepe incidunt totam est impedit placeat deserunt adipisci nostrum iste magnam esse, rem consequuntur, in quam, odio exercitationem vitae.</p>
 </body>
