--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae at modi odit quae nulla ab corporis reiciendis doloribus reprehenderit inventore odio nemo, eligendi, voluptate harum atque suscipit eius obcaecati!</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima </h1>">
         <p>Infelizmente seu navegador não e compatível com isso.</p>
     </iframe>
 
