--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">Menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -30,5 +32,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptates quis blanditiis soluta. Quo, error impedit necessitatibus laboriosam rem magnam vel, facere sit rerum natus illum dicta nam dolorum illo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quibusdam eligendi exercitationem, incidunt expedita, nostrum maiores hic laudantium, aperiam veritatis ullam pariatur sint vero laboriosam assumenda asperiores placeat. Minus, mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quos similique perspiciatis minus laboriosam, maiores consequuntur provident omnis. Dicta ducimus repellendus, voluptate hic laboriosam repudiandae voluptas nesciunt architecto velit debitis!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.diplay = 'none'
+            } else {
+                 itens.style.display ='block'
+            }
+         }     
+    </script>
 </body>
 </html>
