--- a/exercícios/ex021/caixa02.html
+++ b/exercícios/ex021/caixa02.html
@@ -105,7 +105,7 @@
         </section>
      </main>
      <footer>
-        <p>Desenvolvido pelo Curso em vídeo</p>
+        <p>Desenvolvido por Marconny Marques</p>
      </footer>
      <div id="bola"></div>
 </body>
