--- a/exercícios/ex025/form007.html
+++ b/exercícios/ex025/form007.html
@@ -37,7 +37,7 @@
             <input type="text" name="prof" id="iprof" list="lstprof">
             <datalist id="lstprof">
                 <option value="ADM">Administrador</option>
-                <option value="CONT">Contabilidade</option>
+                <option value="ADV">Advogado</option>
                 <option value="DEV">Desenvolvedor</option>
                 <option value="PROF">Professor</option>
             </datalist>
