--- a/exercícios/ex025/form008.html
+++ b/exercícios/ex025/form008.html
@@ -7,7 +7,7 @@
     <title>Formulário</title>
 </head>
 <body>
-    <h1>Exemplo de formulário</h1>
+    <h1>Calculadora</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="in1">Número 1: </label>
@@ -15,7 +15,7 @@
         </p>
 
         <p>
-            <label for="in2">Npumero 2: </label>
+            <label for="in2">Número 2: </label>
             <input type="number" name="n2" id="in2" min="0" max="50" required
             oninput="isoma.innerHTML =Number(in1.value) + Number(in2.value)">
             
