--- a/exercícios/ex025/form010.html
+++ b/exercícios/ex025/form010.html
@@ -7,7 +7,7 @@
     <title>Formulário</title>
 </head>
 <body>
-    <h1>Exemplo de Formulário</h1>
+    <h1>Exemplo de cálculo da idade</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         
         <p>
